@@ -140,7 +140,10 @@ CONFIG_PIC32MX_OC4=n
 CONFIG_PIC32MX_OC5=n
 CONFIG_PIC32MX_I2C1=n
 CONFIG_PIC32MX_I2C2=n
+CONFIG_PIC32MX_SPI1=n
 CONFIG_PIC32MX_SPI2=n
+CONFIG_PIC32MX_SPI3=n
+CONFIG_PIC32MX_SPI4=n
 CONFIG_PIC32MX_UART1=y
 CONFIG_PIC32MX_UART2=n
 CONFIG_PIC32MX_UART3=n
